--- a/style.css
+++ b/style.css
@@ -1,64 +1,171 @@
-*{
-    padding: 0;
-    margin: 0;
+header {
+    background: white;
+    padding: 10px 20px;
+    border-bottom: 1px solid #ccc;
 }
 
-body{
-    background-color: #ffffff;
-}
-   
-li a{
-text-decoration: none;
-font-size: 20px; 
-color: #000000; 
-padding: 20px;
-}
-
-li{
-    list-style: none; 
-}
-
-#logo{
-
-    height: 20px;
-    width: 70px;
-    padding: 20px;
-}
-
-ul{
+.header__content {
     display: flex;
-    flex-direction: row; 
-
-
-}
-
-.menu{
-    display: flex;
-    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    justify-content: space-evenly;
-   
 }
 
-.carousel{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-   
+.logo {
+    height: 40px; 
 }
 
-  .card{
-    width: 300px;
-    height: 300px;
-    border-radius: 4px;
-    border: 1px solid black;
+.btn__home {
+    text-decoration: none;
+    background: none;
+    border: none;
+    color: black;
+    font-size: 18px;
+    padding: 8px 12px;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+    padding: 30px;
+}
+
+
+.curso {
+    background: white;
     padding: 20px;
-    margin: 18px;
-    
-  }
+    border: 2px solid black;  
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
 
-  .texto-card{
+.titulo {
+    font-size: 20px;
+    font-weight: lighter;
+}
+
+.categorias {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+
+.categorias div {
+    background: #ddd;
+    padding: 4px 8px;
+    border-radius: 5px;
+    font-size: 12px;
+}
+
+.descricao {
+    font-size: 14px;
+}
+
+.carga {
+    font-weight: bold;
+}
+
+
+.btn {
+    margin-top: 15px;
+    border: 1px solid black;
+    background: rgb(255, 255, 255); 
+    cursor: pointer;
+}
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background: #ddd;
+    margin-top: 30px;
+}
+
+
+header {
+    background: white;
+    padding: 10px 20px;
+    border-bottom: 1px solid #ccc;
+}
+
+.header__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    height: 30px;
+}
+
+.btn__home {
+    text-decoration: none;
+    background: none;
+    border: none;
+    color: black;
+    font-size: 18px;
+    padding: 8px 12px;
+}
+
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 12px;
+    padding: 55px;
+}
+
+
+.curso {
+    background: white;
+    padding: 20px;
+    border: 1px solid black;  
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.titulo {
     font-size: 20px;
     font-weight: bold;
-    
-  }
+}
+
+.categorias {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+
+.categorias div {
+    background: #ddd;
+    padding: 4px 8px;
+    border-radius: 5px;
+    font-size: 12px;
+}
+
+.descricao {
+    font-size: 14px;
+}
+
+.carga {
+    font-weight: bold;
+}
+
+
+.btn {
+    margin-top: 5px;
+    padding: 10px;
+    border: 1px solid black;
+    background: rgb(255, 0, 0);
+    cursor: pointer;
+}
+
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background: #ddd;
+    margin-top: 30px;
+}
