--- a/style.css
+++ b/style.css
@@ -1,171 +1,130 @@
-header {
-    background: white;
-    padding: 10px 20px;
-    border-bottom: 1px solid #ccc;
+*{
+    padding: 0;
+    margin: 0;
+    /* background-color: #1a1a1a; Mudar a cor do fundo */
 }
 
-.header__content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+body{
+    background-color: #ffffff;
 }
 
-.logo {
-    height: 40px; 
-}
-
-.btn__home {
-    text-decoration: none;
-    background: none;
-    border: none;
-    color: black;
-    font-size: 18px;
-    padding: 8px 12px;
-}
-
-.container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 25px;
-    padding: 30px;
-}
-
-
-.curso {
-    background: white;
+li a{
+    text-decoration: none; /*Remove o sublinhado */
+    font-size: 20px; /* Tamanho da font*/
+    color: #000000; /*Mudar a cor da font*/
     padding: 20px;
-    border: 2px solid black;  
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.titulo {
-    font-size: 20px;
-    font-weight: lighter;
-}
-
-.categorias {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-}
-
-.categorias div {
-    background: #ddd;
-    padding: 4px 8px;
-    border-radius: 5px;
-    font-size: 12px;
-}
-
-.descricao {
-    font-size: 14px;
-}
-
-.carga {
     font-weight: bold;
-}
+
+    }
+    
+    li{
+        list-style: none; /* Remover formartação da lista*/
+
+    }
+    
+    #logo{
+    
+        height: 30px; /*Altura*/
+        width: 100px; /*Largura*/
+        padding: 20px;
+
+    }
+    
+    ul{
+        display: flex; /*Indica a prpriedade FlexBox*/
+        flex-direction: row; /*Colocar os elementos na horizontal ou na vertical*/
+    
+    }
+
+    .menu{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+       
+    }
+
+    .carousel{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+       
+    }
+
+      .card{
+        width: 300px;
+        height: 300px;
+        border-radius: 4px;
+        border: 1px solid black;
+        padding: 20px;
+        margin: 18px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-around;
+        
+      }
+
+      .texto-card{
+        font-size: 20px;
+        font-weight: bold;
+        
+      }
+
+      .categorias{
+        border-radius: 20px;
+        border: 1px solid black;
+        padding: 7px;
+      }
 
 
-.btn {
-    margin-top: 15px;
-    border: 1px solid black;
-    background: rgb(255, 255, 255); 
-    cursor: pointer;
-}
+      .categorias-cards{
+        
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+      }
 
-footer {
-    text-align: center;
-    padding: 20px;
-    background: #ddd;
-    margin-top: 30px;
-}
+      .titulo{
+        font-size: 27px;
+        font-weight: bold;
+        margin: 10px;
+      }
 
+     
+      .card-btns{
+        width: 90px;
+        height: 80px;
+        margin: 10px;
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 10px;
+      }
 
-header {
-    background: white;
-    padding: 10px 20px;
-    border-bottom: 1px solid #ccc;
-}
+      .btn-1{
+        border-radius: 50px;
+        height: 45px;
+        width: 200px;
+        border-color: #ff0000;
+ 
+      }
 
-.header__content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+      .btn-2{
+        border-radius: 50px;
+        height: 45px;
+        width: 200px;
+       border: none;
+        background-color: #ff0000;
+        color: #ffffff;
+      }
 
-.logo {
-    height: 30px;
-}
-
-.btn__home {
-    text-decoration: none;
-    background: none;
-    border: none;
-    color: black;
-    font-size: 18px;
-    padding: 8px 12px;
-}
-
-
-.container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 12px;
-    padding: 55px;
-}
-
-
-.curso {
-    background: white;
-    padding: 20px;
-    border: 1px solid black;  
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.titulo {
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.categorias {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-}
-
-.categorias div {
-    background: #ddd;
-    padding: 4px 8px;
-    border-radius: 5px;
-    font-size: 12px;
-}
-
-.descricao {
-    font-size: 14px;
-}
-
-.carga {
-    font-weight: bold;
-}
-
-
-.btn {
-    margin-top: 5px;
-    padding: 10px;
-    border: 1px solid black;
-    background: rgb(255, 0, 0);
-    cursor: pointer;
-}
-
-
-footer {
-    text-align: center;
-    padding: 20px;
-    background: #ddd;
-    margin-top: 30px;
-}
+      .caixa-icone{
+        display: flex;
+        font-size: 15px;
+        padding: 10px;
+      }
